evening push before going home

--- a/python_stack/django_projects/belt_reviewer/apps/bookreviews/templates/bookshome.html
+++ b/python_stack/django_projects/belt_reviewer/apps/bookreviews/templates/bookshome.html
@@ -21,8 +21,17 @@
         <br>
         <br>
         <table class="recentreviews">
-
             {% for review in threerecentreviews %}
+            <tr class="booktitle">
+                <td>
+                    {{ review.book.name}}
+                </td> 
+            </tr>
+            <tr class="bookrating">
+                    <td>
+                        {{ review.rating}}
+                    </td> 
+            </tr>
             <tr>
                 <td>
                     {{ review.content}}
