--- a/python_stack/django_projects/belt_reviewer/apps/bookreviews/static/bookreviews/css/bookshomestyle.css
+++ b/python_stack/django_projects/belt_reviewer/apps/bookreviews/static/bookreviews/css/bookshomestyle.css
@@ -6,10 +6,28 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+    margin-left: 10px;
+}
+
 .topdiv {
+    margin-left: 20px;
     height: 100px;
-    background-color: azure;
-    border: 1px solid black;
+}
+
+.lefttop{
+    display: inline-block;
+    width: 48%;
+    height: 100px;
+    margin-top: 20px;
+}
+
+.righttop {
+    display: inline-block;
+    width: 50%;
+    height: 100px;
+    text-align: right;
+    margin-top: 20px;    
 }
 
 .leftdiv {
@@ -17,7 +35,6 @@
     display: inline-block;
     width: 45%;
     height: 400px;
-    border: 1px solid black;
 }
 
 .rightdiv {
@@ -25,7 +42,11 @@
     display: inline-block;    
     width: 45%;
     height: 400px;    
-    border: 1px solid black;
+}
+
+.sectionheader {
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .otherreviewslist {
@@ -48,6 +69,12 @@
 .bookreviewtext {
     margin-left: 40px;
     margin-bottom: 15px;
+}
+
+.bookreviewposted {
+    margin-left: 40px;
+    margin-bottom: 15px;
+    font-style: italic; 
 }
 
 .checked {
