--- a/python_stack/django_projects/belt_reviewer/apps/bookreviews/static/bookreviews/css/showbookstyle.css
+++ b/python_stack/django_projects/belt_reviewer/apps/bookreviews/static/bookreviews/css/showbookstyle.css
@@ -6,10 +6,35 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+    margin-left: 10px;
+}
+
+
 .topdiv {
+    margin-left: 20px;
+    height: 75px;
+}
+
+.lefttop{
+    display: inline-block;
+    width: 48%;
+    height: 75px;
+    margin-top: 20px;
+    color: white;
+}
+
+.righttop {
+    display: inline-block;
+    width: 50%;
+    height: 75px;
+    text-align: right;
+    margin-top: 20px;    
+}
+
+.seconddiv {
     height: 100px;
-    background-color: azure;
-    border: 1px solid black;
+
 }
 
 .leftdiv {
@@ -17,7 +42,7 @@
     display: inline-block;
     width: 45%;
     height: 400px;
-    border: 1px solid black;
+
 }
 
 .rightdiv {
@@ -25,7 +50,6 @@
     display: inline-block;    
     width: 45%;
     height: 400px;    
-    border: 1px solid black;
 }
 
 .otherreviewslist {
@@ -52,4 +76,18 @@
 
 .checked {
     color: orange;
+}
+
+.submitdiv {
+    width: 72%;
+}
+
+.submitbtn {
+    width: 150px;
+    height: 30px;
+    float: right;
+    color: white;
+    border: 2px solid black;
+    box-shadow: 3px 3px 3px black;
+    background-color: #5a7dae;
 }
