--- a/python_stack/django_projects/belt_reviewer/apps/bookreviews/templates/showbook.html
+++ b/python_stack/django_projects/belt_reviewer/apps/bookreviews/templates/showbook.html
@@ -14,37 +14,59 @@
 </head>
 <body>
     <div class="topdiv">
-        <p class="headerp">Welcome!</p>
-        <p><a href="/books">Home</a></p>
-        <p><a href="/logoff">Logoff</a></p>
-    </div>
+        <h2 class="lefttop">.</h2>
+        <div class="righttop">
+            <a href="/books">Home</a>
+            <a href="/logoff">Logout</a>
+        </div
+    </div>    
     <div class="seconddiv">
-        <p>Add a New Book Title and a Review</p>
+        <h3>{{ book_name }}</h3>
+        <p>Author(s)</p>
+        {% for book_author in book_authors %}
+            <p>{{ book_author.first_name }} {{ book_author.last_name }}</p>
+        {% endfor %}
+    </div>
+    <div class="leftdiv" style="overflow-y: scroll">
+        <h4>Reviews:</h4>
+            {% for review in book_reviews %}
+                {{ review }}
+                <div class="bookrating">
+                    {% for x in tempratinglist %}
+                        {% if x <= review.rating %}
+                            <span class="fa fa-star checked"></span>
+                        {% else %}
+                            <span class="fa fa-star"></span>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            <p><a href="/users/{{ review.user_id }}">{{ review.user.first_name }}</a> says {{ review.content }}</p>
+            {% endfor %}
+    </div>
+    <div class="rightdiv">
+        <h4>Add a Review:</h4>
         <form action="process_add" method="POST">
-                {% csrf_token %}
-        <label>Book Title</label><br>
-        <input type="text" name="book_title"><br>
-        <label>Author:</label>
-        <label>Choose from the list</label>
-        <select name="book_author">
-                {% for author in authorslist %}
-                    <option value="{{ author.first_name }} {{ author.last_name }}">{{ author.first_name }} {{ author.last_name }}</option>
-                {% endfor %}
-        </select><br>
-        <label>Or add another Author</label>
-        <input type="text" name="book_new_author" value=""><br>
-        <label for="">Review:</label><br>
-        <textarea name="review_text" id="" cols="30" rows="10"></textarea><br>
-        <label for="">Rating</label>
-        <select name="book_rating">
-                <option value="1">1 Star</option>
-                <option value="2">2 Stars</option>
-                <option value="3">3 Stars</option>
-                <option value="4">4 Stars</option>
-                <option value="4">5 Stars</option>                
-        </select><br>
-        <input type="submit" class="submitbtn" value="Add Book and Review">
+            {% csrf_token %}        
+            <input type="hidden" name="book_title" value={{ book_name }}>
+            <input type="hidden" name="book_new_author_fname" value="">
+            <input type="hidden" name="book_new_author_lname" value="">
+            {% for book_author in book_authors %}
+                <input type="hidden" name="book_author" value="{{ book_author.id }}">    
+            {% endfor %}
+            <textarea name="review_text" id="" cols="60" rows="10"></textarea><br><br>
+            <label for="">Rating</label>
+            <select name="book_rating">
+                    <option value="1">1 Star</option>
+                    <option value="2">2 Stars</option>
+                    <option value="3">3 Stars</option>
+                    <option value="4">4 Stars</option>
+                    <option value="4">5 Stars</option>                
+            </select><br><br>
+            <div class="submitdiv">
+                <input type="submit" class="submitbtn" value="Submit Review">
+            </div>
         </form>
+
     </div>
 </body>
 </html>
