fixed a small div markup issue

--- a/python_stack/django_projects/belt_reviewer/apps/bookreviews/templates/showbook.html
+++ b/python_stack/django_projects/belt_reviewer/apps/bookreviews/templates/showbook.html
@@ -18,7 +18,7 @@
         <div class="righttop">
             <a href="/books">Home</a>
             <a href="/logoff">Logout</a>
-        </div
+        </div>
     </div>    
     <div class="seconddiv">
         <h3>{{ book_name }}</h3>
