more changes to fix a bug in add a review to a book code

--- a/python_stack/django_projects/belt_reviewer/apps/bookreviews/templates/addbook.html
+++ b/python_stack/django_projects/belt_reviewer/apps/bookreviews/templates/addbook.html
@@ -39,7 +39,7 @@
         <label class="bottomspacing">First Name:</label><input  class="inputtext" type="text" name="book_new_author_fname" value=""><br><br>
         <label class="bottomspacing">Last Name:</label><input  class="inputtext" type="text" name="book_new_author_lname" value=""><br><br>
         <div>
-            <div class="reviewdiv"ß>Review:</div>
+            <div class="reviewdiv">Review:</div>
             <textarea name="review_text" id="" cols="50" rows="10"></textarea><br><br>
         </div>
         <label for="">Rating</label>
