added delete button

--- a/python_stack/django_projects/belt_reviewer/apps/login_registration/templates/index.html
+++ b/python_stack/django_projects/belt_reviewer/apps/login_registration/templates/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="topdiv">
-        <p class="headerp">CodingDojo Wall</p>  <!-- CHANGE THIS PER APP -->
+        <p class="headerp">Welcome!</p>  <!-- CHANGE THIS PER APP -->
     </div>
     <div class="maincontainer">
         <p class="headerlabel">Registration</p>
