--- a/python_stack/django_projects/belt_reviewer/apps/login_registration/templates/success.html
+++ b/python_stack/django_projects/belt_reviewer/apps/login_registration/templates/success.html
@@ -23,7 +23,7 @@
 <body>
     <div class="topdiv">
         <p class="headerlabel">Success!  Welcome, {{ first_name }}</p>
-        <p class="secondline">Successfull registered (or logged in)!</p>
+        <a href="logoff">Logout</a>
     </div>
 </body>
 </html>
