--- a/python_stack/django_projects/belt_reviewer/apps/bookreviews/templates/showbook.html
+++ b/python_stack/django_projects/belt_reviewer/apps/bookreviews/templates/showbook.html
@@ -30,7 +30,7 @@
     <div class="leftdiv" style="overflow-y: scroll">
         <h4>Reviews:</h4>
             {% for review in book_reviews %}
-                {{ review }}
+                <hr>
                 <div class="bookrating">
                     {% for x in tempratinglist %}
                         {% if x <= review.rating %}
@@ -41,6 +41,18 @@
                     {% endfor %}
                 </div>
             <p><a href="/users/{{ review.user_id }}">{{ review.user.first_name }}</a> says {{ review.content }}</p>
+            <p class="deletereview">
+                {% if user_id == review.user_id %}
+                    <br>
+                    <form action="delete_review" method="POST">
+                        {% csrf_token %}
+                        <input type="hidden" name="review_to_delete" value="{{ review.id }}">
+                        <input type="hidden" name="active_book" value="{{ book_id }}">
+                        <input type="submit" class="submitbtn" value="Delete this Review">
+                    </form>
+                {% endif %}
+                <br><br>
+            </p>
             {% endfor %}
     </div>
     <div class="rightdiv">
