--- a/python_stack/django_projects/python_belt/apps/belt_app/templates/addjob.html
+++ b/python_stack/django_projects/python_belt/apps/belt_app/templates/addjob.html
@@ -28,7 +28,7 @@
                             <div  class="addformrow">Title</div>
                         </td>
                         <td>
-                            <input type="text" class="onehundredpercent" name="job_title">
+                            <input type="text" class="onehundredpercent" name="job_title" value="{{ job_title }}">
                         </td>
                         <td>
                                 <div class="formflash">
@@ -46,7 +46,7 @@
                             <div  class="addformrow">Description</div>
                         </td>
                         <td>
-                            <textarea class="addjobtextarea" name="job_description"></textarea>
+                            <textarea class="addjobtextarea" name="job_description">{{ job_title }}</textarea>
                             <br />
                         </td>
                         <td>
@@ -66,7 +66,7 @@
                             <div class="addformrow">Location</div>
                         </td>
                         <td>
-                            <input type="text" class="onehundredpercent" name="job_location">
+                            <input type="text" class="onehundredpercent" name="job_location" value="{{ job_location }}"">
                         </td>
                         <td>
                                 <div class="formflash">
