fix issue with jusin title instead of description in jinja tamplate

--- a/python_stack/django_projects/python_belt/apps/belt_app/templates/addjob.html
+++ b/python_stack/django_projects/python_belt/apps/belt_app/templates/addjob.html
@@ -46,7 +46,7 @@
                             <div  class="addformrow">Description</div>
                         </td>
                         <td>
-                            <textarea class="addjobtextarea" name="job_description">{{ job_title }}</textarea>
+                            <textarea class="addjobtextarea" name="job_description">{{ job_description }}</textarea>
                             <br />
                         </td>
                         <td>
